$Id: History,v 1.4 1999-04-28 14:13:44 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

greps-01-00-04  28th April 1999  John Allison
- Moved G4VVisManager and G4VGraphicsScene to intercoms.

greps-01-00-03  7th February 1999  John Allison
- Removed GNU_GCC from G4Polymarker.cc.
- Added G4VGraphicsScene::AddThis (G4Polycone and G4Polyhedra.

greps-01-00-02  6th January 1999  John Allison
- Very minor change in G4VisExtent.cc - 2 -> 2.
- Inclusion of test/ in tag.

greps-01-00-01  6th January 1999  John Allison
- Corrected constructors of G4VisAttributes for initialisation of
  fDaughtersInvisible.

greps-00-04-02 02 December 1998 Evgeni Tcherniaev
- Added G4NURBS::CalcPoint() for calculation coordinates of a
point lying on the nurbs surface.

greps-00-04-01  25th November 1998  John Allison
- Added void G4VisAttributes::SetDaughtersInvisible (G4bool).

greps-00-03-03  9th November 1998 Satoshi Tanaka
Added G4String fInfo and its access functions to G4VMarker

greps-00-03-02  6th November 1998  John Allison
- Cleaned up GNUmakefile - no longer includes unnecesary -I's

greps-00-03-01  26th September 1998  John Allison
- Removed SetWorldVolume from G4VVisManager - no longer used.
