@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4NURBStube.hh,v 1.1 1999-01-07 16:09:11 gunter Exp $
+// $Id: G4NURBStube.hh,v 1.2 1999-05-12 16:10:50 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -23,12 +23,8 @@
 class	G4NURBStube : public G4NURBS
 	{
 	public:	G4NURBStube(G4double RMIN, G4double RMAX, G4double DZ);
-virtual	const char*	Whoami() const;
+	  const char*	Whoami() const;
 	};
 
 #endif
 // end of __C_G4NURBStube__
-
-
-
-
