@@ -1,14 +1,0 @@
-// This code implementation is the intellectual property of
-// the RD44 GEANT4 collaboration.
-//
-// By copying, distributing or modifying the Program (or any work
-// based on the Program) you indicate your acceptance of this statement,
-// and all its terms.
-//
-// $Id: G4Point3DList.icc,v 1.1 1999-01-07 16:09:11 gunter Exp $
-// GEANT4 tag $Name: not supported by cvs2svn $
-//
-// 
-// John Allison  July 1995
-
-inline G4Point3DList::~G4Point3DList () {}
