@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VVisPrim.icc,v 1.1 1999-01-07 16:09:14 gunter Exp $
+// $Id: G4VVisPrim.icc,v 1.2 1999-05-12 16:10:57 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -17,16 +17,7 @@ inline G4VVisPrim::G4VVisPrim (const G4VVisPrim& prim):
 G4Visible (prim)
 {}
 
-inline G4VVisPrim& G4VVisPrim::operator = (const G4VVisPrim& right) {
-  ((G4Visible*) this) -> operator = (right);
-  return *this;
-}
-
 inline G4VVisPrim::G4VVisPrim (const G4VisAttributes* pVA):
 G4Visible (pVA)
 {}
-
-inline G4bool G4VVisPrim::operator == (const G4VVisPrim& prim) const{
-  return this == &prim;
-}
 
