@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VVisPrim.cc,v 1.1 1999-01-07 16:09:19 gunter Exp $
+// $Id: G4VVisPrim.cc,v 1.2 1999-05-12 16:11:07 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -14,6 +14,18 @@
 #include "G4VVisPrim.hh"
 #include "G4VisAttributes.hh"
 #include "G4ios.hh"
+
+G4VVisPrim::~G4VVisPrim () {}
+
+G4VVisPrim& G4VVisPrim::operator = (const G4VVisPrim& right) {
+  if (&right == this) return *this;
+  G4Visible::operator = (right);
+  return *this;
+}
+
+G4bool G4VVisPrim::operator == (const G4VVisPrim& right) const{
+  return G4Visible::operator == (right);
+}
 
 ostream& operator << (ostream& os, const G4VVisPrim& prim) {
   return os << (G4Visible) prim;
