@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Visible.cc,v 1.1 1999-01-07 16:09:19 gunter Exp $
+// $Id: G4Visible.cc,v 1.2 1999-05-12 16:11:08 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -15,6 +15,18 @@
 #include "G4Visible.hh"
 #include "G4VisAttributes.hh"
 #include "G4ios.hh"
+
+G4Visible::~G4Visible () {}
+
+G4Visible& G4Visible::operator = (const G4Visible& right) {
+  if (&right == this) return *this;
+  fpVisAttributes = right.fpVisAttributes;
+  return *this;
+}
+
+G4bool G4Visible::operator == (const G4Visible& right) const{
+  return fpVisAttributes == right.fpVisAttributes;
+}
 
 ostream& operator << (ostream& os, const G4Visible& v) {
   if (v.fpVisAttributes) return os << *(v.fpVisAttributes);
