@@ -1,4 +1,4 @@
-$Id: History,v 1.4 1999-04-28 14:13:44 johna Exp $
+$Id: History,v 1.5 1999-05-12 16:10:42 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+greps-01-00-05  12th May 1999  John Allison
+- Made destructors virtual where applicable.
 
 greps-01-00-04  28th April 1999  John Allison
 - Moved G4VVisManager and G4VGraphicsScene to intercoms.
